--- a/js/tmpl/toolbar.hbs
+++ b/js/tmpl/toolbar.hbs
@@ -1,6 +1,6 @@
 <h1>{{this.active.label}}</h1>
 <nav>
 	<ul>
-		{{#each this.navItems}}<li class="{{classes}}"><a href="#{{view}}">{{view}}</a></li>{{/each}}
+		{{#each this.navItems}}<li class="{{classes}}"><a href="#{{view}}">{{label}}</a></li>{{/each}}
 	</ul>
 </nav>
