Added some basic styling, updated templates to better reflect the type of media they're playing.

--- a/css/base.css
+++ b/css/base.css
@@ -1,8 +1,9 @@
+html, body { height: 100%; }
+
 body {
 	font-family: Helvetica, sans-serif;
 	font-size: 80%;
 }
 
-#stage {
-	padding: 12px;
-}
+p { line-height: 1.5; }
+#stage { padding: 12px; }
