--- a/css/nowPlaying.css
+++ b/css/nowPlaying.css
@@ -1,1 +1,25 @@
 /* #nowPlaying styles here */
+#nowPlaying {
+	background: #f5f5f5;
+	border-top: 1px solid #ddd;
+	height: 120px;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	padding: 12px;
+	overflow: auto;
+}
+
+#nowPlaying .thumbnail {
+	float: left;
+	margin-right: 24px;
+}
+
+#nowPlaying img {
+	height: 100%;
+	border: 4px solid #ddd;
+}
+
+#nowPlaying .information {
+	padding: 0 16px;
+}
