--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -3,10 +3,12 @@
 	overflow: auto;
 	width: 100%;
 	line-height: 42px;
+	background: #f5f5f5;
+	border-bottom: 1px solid #ddd;
 }
 
 #toolbar h1 {
-	margin: 0;
+	margin: 0 0 0 18px;
 	float: left;
 }
 
@@ -19,10 +21,14 @@
 }
 
 #toolbar li a {
+	color: #049;
 	display: block;
 	padding: 0 8px;
+	text-decoration: none;
 }
 
 #toolbar .selected a {
-	color:red;
+	color: #000;
+	background: #fff;
+	box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
 }
