--- a/js/tmpl/nowPlayingMovie.hbs
+++ b/js/tmpl/nowPlayingMovie.hbs
@@ -1,9 +1,13 @@
 {{#if thumbnail}}
-	<img src="{{thumbnail}}">
+<div class="thumbnail">
+		<img src="{{thumbnail}}">
+</div>
 {{/if}}
-<p>{{title}} ({{year}})</p>
-{{#unless plotoutline}}
-	<p>{{plot}}</p>
-{{else}}
-	<p>{{plotoutline}}</p>
-{{/unless}}
+<div class="information">
+	<h2>{{title}} ({{year}})</h2>
+	{{#unless plotoutline}}
+		<p>{{plot}}</p>
+	{{else}}
+		<p>{{plotoutline}}</p>
+	{{/unless}}
+</div>
