Added settings view. Added additional views for handling several instances (connections doesn't mirror this list yet).

--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,6 @@
 @import 'toolbar.css';
 @import 'nowPlaying.css';
 @import 'overview.css';
+@import 'newInstance.css';
+@import 'instanceList.css';
+@import 'settings.css';
