--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,4 @@
+* { box-sizing: border-box; }
 html, body { height: 100%; }
 
 body {
@@ -6,4 +7,22 @@ body {
 }
 
 p { line-height: 1.5; }
+a { cursor: pointer; }
+
+input,
+button {
+	padding: 4px;
+	border-radius: 2px;
+}
+
+input {
+	border: 1px solid #ddd;
+	box-shadow: inset 0 0 2px #ddd;	
+}
+
+button {
+	border: 1px solid #ddd;
+	background: #f5f5f5;
+}
+
 #stage { padding: 12px; }
