--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -12,9 +12,8 @@
 	float: left;
 }
 
-#toolbar nav {
-	float: right;
-}
+#toolbar nav { float: right; }
+#toolbar ul { margin: 0; }
 
 #toolbar li {
 	display: inline-block;
@@ -31,4 +30,10 @@
 	color: #000;
 	background: #fff;
 	box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+}
+
+@media all and (max-width: 480px) {
+	#toolbar li a {
+		font-size: 90%;
+	}
 }
