--- a/css/base.css
+++ b/css/base.css
@@ -25,4 +25,28 @@ button {
 	background: #f5f5f5;
 }
 
-#stage { padding: 12px; }
+#toolbar {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 44px;
+	z-index: 1;
+}
+
+#stage {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	padding-top: 44px;
+	padding-bottom: 120px;
+	z-index: 0;
+}
+
+#nowPlaying {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 120px;
+	z-index: 1;
+}
