--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 @import 'toolbar.css';
 @import 'nowPlaying.css';
 @import 'overview.css';
-@import 'newInstance.css';
+@import 'editInstance.css';
 @import 'instanceList.css';
 @import 'settings.css';
 @import 'remoteTouch.css';
