Enable editing instances.

--- a/js/tmpl/editInstance.hbs
+++ b/js/tmpl/editInstance.hbs
@@ -1,6 +1,6 @@
 <ul class="editInstance">
-	<li><label>Label<input class="label" placeholder="{{label}}"></label></li>
-	<li><label>Host/IP<input class="host" placeholder="{{host}}"></label></li>
-	<li><label>Port<input class="port" placeholder="{{port}}"></label></li>
+	<li><label>Label<input class="label" value="{{label}}"></label></li>
+	<li><label>Host/IP<input class="host" value="{{host}}"></label></li>
+	<li><label>Port<input class="port" value="{{port}}"></label></li>
 	<li><button class="save">Save instance</button></li>
 </ul>
