First pass on keyboard control (desktop)

--- a/js/tmpl/remoteDesktop.hbs
+++ b/js/tmpl/remoteDesktop.hbs
@@ -1,8 +1,10 @@
 <div>
-	<ul class="remote-buttons">
-		<li>up</li>
-		<li>left</li>
-		<li>right</li>
-		<li>down</li>
+	<p>You are now in "direct interaction" mode, use your keyboard as you normally would on a desktop computer to interact with XBMC. There's only a small subset of keys working at the moment:</p>
+	<ul>
+		<li><code>&lt;Up>, &lt;Down>, &lt;Left>, &lt;Right></code> arrows to navigate</li>
+		<li><code>&lt;Escape></code> or <code>&lt;Backspace></code> to go back</li>
+		<li><code>&lt;Enter></code> to go forward/select highlighted item</li>
+		<li><code>&lt;c></code> to bring up context menu</li>
+		<li><code>&lt;x></code> to stop playback</li>
 	</ul>
 </div>
