Add +/- to the list of supported keypresses

--- a/js/tmpl/remoteDesktop.hbs
+++ b/js/tmpl/remoteDesktop.hbs
@@ -4,6 +4,7 @@
 		<li><code>&lt;Up>, &lt;Down>, &lt;Left>, &lt;Right></code> arrows to navigate</li>
 		<li><code>&lt;Escape></code> or <code>&lt;Backspace></code> to go back</li>
 		<li><code>&lt;Enter></code> to go forward/select highlighted item</li>
+		<li><code>&lt;+></code> and <code>&lt;-></code> to control volume level</li>
 		<li><code>&lt;c></code> to bring up context menu</li>
 		<li><code>&lt;x></code> to stop playback</li>
 	</ul>
